--- a/css/games------------------.css
+++ b/css/games------------------.css
@@ -202,175 +202,110 @@
 	left: 514px;
 }
 
-#slideshowu277
+#pu700
 {
-	z-index: 38;
 	width: 0.01px;
-	height: 251px;
-	margin-left: 240px;
+	margin-left: 287px;
 	margin-top: 23px;
 	position: relative;
 }
 
-#u321-4
+#u700
 {
-	position: absolute;
-	width: 70px;
-	min-height: 30px;
+	z-index: 38;
+	width: 120px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u848
+{
+	z-index: 56;
+	width: 114px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 3px;
+	left: 264px;
+}
+
+#ppu712-7
+{
+	width: 0.01px;
+	margin-left: 253px;
+	margin-top: 12px;
+	position: relative;
+}
+
+#pu712-7
+{
+	width: 0.01px;
+	position: relative;
+	margin-right: -10000px;
+	left: 260px;
+}
+
+#u712-7
+{
+	z-index: 47;
+	width: 191px;
+	min-height: 124px;
 	text-align: center;
-	line-height: 1.4;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	top: 220px;
-	left: 380px;
+	color: #FFFFFF;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
 }
 
-#u321-4popup
+#u718
 {
-	z-index: 39;
-}
-
-#u280
-{
-	position: absolute;
-	width: 480px;
-	height: 214px;
-	background-color: transparent;
-}
-
-#u280popup
-{
-	z-index: 43;
-}
-
-#u363
-{
-	z-index: 44;
-	width: 480px;
-	height: 214px;
+	z-index: 55;
+	width: 136px;
+	min-height: 43px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	margin-right: -10000px;
 	position: relative;
+	margin-right: -10000px;
+	margin-top: 53px;
+	left: 27px;
 }
 
-#u363_img
+#u710-7
 {
-	margin-top: -24px;
-	margin-bottom: -122px;
+	z-index: 40;
+	width: 191px;
+	min-height: 124px;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
 }
 
-#u377
+#u712-4,#u710-4
 {
-	z-index: 46;
-	width: 480px;
-	height: 214px;
+	font-size: 12px;
+	line-height: 2;
+}
+
+#u712-2,#u712-5,#u710-2,#u710-5
+{
+	font-size: 16px;
+	font-style: italic;
+}
+
+#u716
+{
+	z-index: 54;
+	width: 135px;
+	min-height: 43px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	margin-right: -10000px;
 	position: relative;
-}
-
-#u363_clip,#u377_clip
-{
-	overflow: hidden;
-	width: 480px;
-	height: 214px;
-}
-
-#u377_img
-{
-	margin-top: -22px;
-	margin-bottom: -84px;
-}
-
-#u322
-{
-	position: absolute;
-	width: 340px;
-	top: 221px;
-}
-
-#u322popup
-{
-	z-index: 48;
-}
-
-#u369-4
-{
-	z-index: 49;
-	width: 340px;
-	min-height: 30px;
-	text-align: left;
-	line-height: 1.4;
-	color: #999999;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	margin-right: -10000px;
-	position: relative;
-}
-
-#u383-4
-{
-	z-index: 53;
-	width: 340px;
-	min-height: 30px;
-	text-align: left;
-	line-height: 1.4;
-	color: #999999;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	margin-right: -10000px;
-	position: relative;
-}
-
-#u279-4
-{
-	position: absolute;
-	width: 30px;
-	min-height: 30px;
-	text-align: center;
-	line-height: 1.4;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	top: 221px;
-	left: 350px;
-}
-
-#u279-4popup
-{
-	z-index: 57;
-}
-
-#u321,#u279
-{
-	color: #999999;
-}
-
-#u278-4
-{
-	position: absolute;
-	width: 30px;
-	min-height: 30px;
-	text-align: center;
-	line-height: 1.4;
-	color: #999999;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	top: 221px;
-	left: 450px;
-}
-
-#u278-4popup
-{
-	z-index: 61;
-}
-
-.SSFirstButton,.SSPreviousButton,.SSNextButton,.SSLastButton,.SSSlideLink,.SSCloseButton /* slideshowFreeStyle */
-{
-	cursor: pointer;
-}
-
-.SSSlideLoading /* slideshowFreeStyle */
-{
-	background: url("../images/loading.gif") no-repeat center center;
+	margin-top: 53px;
+	left: 27px;
 }
 
 #u827-6
@@ -379,7 +314,7 @@
 	width: 920px;
 	min-height: 37px;
 	margin-left: 20px;
-	margin-top: 47px;
+	margin-top: 42px;
 }
 
 body
