--- a/css/gator-chomp.css
+++ b/css/gator-chomp.css
@@ -7,58 +7,67 @@
 {
 	z-index: 1;
 	width: 960px;
-	min-height: 173px;
+	min-height: 551px;
 	background-image: none;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #000000;
 	background-color: transparent;
-	padding-bottom: 378px;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+#page_position_content
+{
+	margin-top: 4px;
+	margin-bottom: 20px;
+}
+
+#pu87
+{
+	width: 0.01px;
+	left: -100px;
+	position: relative;
 }
 
 #u87
 {
 	z-index: 2;
 	width: 1160px;
-	padding-bottom: 0px;
+	height: 96px;
 	margin-right: -10000px;
-	margin-top: 77px;
-	left: -100px;
+	margin-top: 73px;
 }
 
-#u87_align_to_page
+#u401
 {
-	margin-left: auto;
-	margin-right: auto;
-	width: 962px;
-	left: -99px;
-}
-
-#u87_position_content
-{
-	margin-top: 9px;
+	z-index: 3;
 	margin-bottom: -6px;
+	width: 485px;
+	margin-right: -10000px;
+	margin-top: 97px;
+	left: 336px;
 }
 
 #menuu196
 {
 	z-index: 5;
-	width: 514px;
-	left: 320px;
+	width: 550px;
+	margin-right: -10000px;
+	margin-top: 82px;
+	left: 302px;
 }
 
 #u412
 {
-	width: 127px;
+	width: 136px;
 	min-height: 19px;
 	margin-right: -10000px;
 }
 
 #u415-4
 {
-	width: 127px;
+	width: 136px;
 	min-height: 12px;
 	margin-right: -10000px;
 }
@@ -81,15 +90,15 @@
 
 #u419
 {
-	width: 127px;
+	width: 136px;
 	min-height: 19px;
 	margin-right: -10000px;
-	left: 129px;
+	left: 138px;
 }
 
 #u421-4
 {
-	width: 127px;
+	width: 136px;
 	min-height: 12px;
 	margin-right: -10000px;
 }
@@ -112,15 +121,15 @@
 
 #u509
 {
-	width: 127px;
+	width: 136px;
 	min-height: 19px;
 	margin-right: -10000px;
-	left: 258px;
+	left: 276px;
 }
 
 #u513-4
 {
-	width: 127px;
+	width: 136px;
 	min-height: 12px;
 	margin-right: -10000px;
 }
@@ -143,20 +152,20 @@
 
 #u433
 {
-	width: 127px;
+	width: 136px;
 	min-height: 19px;
 	margin-right: -10000px;
-	left: 387px;
+	left: 414px;
 }
 
 #u413,#u420,#u512,#u434
 {
-	width: 127px;
+	width: 136px;
 }
 
 #u437-4
 {
-	width: 127px;
+	width: 136px;
 	min-height: 12px;
 	margin-right: -10000px;
 }
@@ -185,25 +194,79 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u401
-{
-	z-index: 3;
-	left: 336px;
-	margin-top: 3px;
-}
-
 #u487
 {
 	z-index: 30;
 	width: 129px;
 	margin-right: -10000px;
-	margin-top: 4px;
-	left: 414px;
+	left: 514px;
+}
+
+#u754
+{
+	z-index: 38;
+	width: 443px;
+	margin-left: 259px;
+	margin-top: 23px;
+	position: relative;
+}
+
+#u754_clip
+{
+	overflow: hidden;
+	width: 443px;
+	height: 224px;
+}
+
+#u754_img
+{
+	margin-top: -14px;
+	margin-bottom: -57px;
+}
+
+#u757-17
+{
+	z-index: 40;
+	width: 443px;
+	min-height: 71px;
+	font-size: 12px;
+	color: #FFFFFF;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	margin-left: 259px;
+	margin-top: 12px;
+	position: relative;
+}
+
+#u757-2
+{
+	font-weight: bold;
+}
+
+#u758
+{
+	z-index: 57;
+	width: 135px;
+	min-height: 43px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	margin-left: 413px;
+	margin-top: 34px;
+	position: relative;
+}
+
+#u827-6
+{
+	z-index: 32;
+	width: 920px;
+	min-height: 37px;
+	margin-left: 20px;
+	margin-top: 5px;
 }
 
 body
 {
-	padding-top: 58px;
+	padding-top: 18px;
 }
 
 #page .verticalspacer
